# study_python

./: .gitignore
attention/: .gitignore  pyproject.toml
attention/attention/: attention.ipynb
attention/tests/: test_attention.py
darts/: darts.ipynb  pyproject.toml  最高気温.csv
prauc/: Untitled.ipynb  pyproject.toml
prauc/prauc/: AUCについて.ipynb
prauc/tests/: test_prauc.py
