[tool.poetry]
name = "attention"
version = "0.1.0"
description = ""
authors = ["shuns0314 <shunsuke.naka0314@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.5"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
