[tool.poetry]
name = "darts"
version = "0.1.0"
description = ""
authors = ["shuns0314 <shunsuke.naka0314@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
u8darts = "^0.2.2"
notebook = "^6.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
