[tool.poetry]
name = "prauc"
version = "0.1.0"
description = ""
authors = ["shuns0314 <shunsuke.naka0314@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
imbalanced-learn = "^0.6.2"
scikit-learn = "^0.23.1"
pandas = "^1.0.4"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
